# brunnels

./: .gitignore  CLAUDE.md  README.md  brunnel.py  brunnel_way.py  brunnels.py  compound_brunnel_way.py  coordinate_combiner.py  distance_utils.py  geometry.py  geometry_utils.py  gpx.py  merge.py  models.py  overpass.py  pyproject.toml  route.py  test_cli_display.py  visualization.py
.github/: copilot-instructions.md
.github/workflows/: main.yml
brunnels/: __init__.py  brunnel.py  brunnel_way.py  cli.py  compound_brunnel_way.py  coordinate_combiner.py  distance_utils.py  file_utils.py  geometry.py  geometry_utils.py  overpass.py  route.py
brunnels/tests/: test_route.py
samples/: Coronado Bridge map.html
src/brunnels/: __init__.py  _version.py  brunnel.py  brunnel_way.py  cli.py  compound_brunnel_way.py  config.py  coordinate_combiner.py  file_utils.py  filter_pipeline.py  filters.py  geometry.py  geometry_utils.py  metrics.py  overpass.py  route.py  shapely_utils.py  visualization.py
src/brunnels/templates/: brunnel_way.html.j2  compound_brunnel_way.html.j2
tests/: test_brunnel.py  test_coordinate_combiner.py  test_distance_conversion.py  test_filter_pipeline.py  test_filters.py  test_geometry_utils.py  test_integration.py  test_properties.py  test_route.py  test_visualization.py
tests/fixtures/: AcrossAmerica map (1).html  AcrossAmerica map (2).html  AcrossAmerica map (3).html  AcrossAmerica map.html  AcrossAmerica.json  Area51.json  Chehalis.json  Coronado.json  PaulRevere map.html  PaulRevere.json  Toronto.json  Transfagarasan.json  VV_Val_de_Zafan.json
