[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brunnels"
authors = [
    {name = "Jim Mattson", email = "jsmattsonjr@gmail.com"},
]
description = "A GPX route analysis tool that identifies bridges and tunnels along your route"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
]
keywords = ["gpx", "bridges", "tunnels", "cycling", "openstreetmap", "gis", "visualization"]

dependencies = [
    "gpxpy",
    "folium",
    "requests",
    "shapely",
    "geopy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/jsmattsonjr/brunnels"
Repository = "https://github.com/jsmattsonjr/brunnels.git"
Issues = "https://github.com/jsmattsonjr/brunnels/issues"

[project.scripts]
brunnels = "brunnels.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brunnels*"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools_scm]
