[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brunnels"
dynamic = ["version"]
authors = [
    {name = "Jim Mattson", email = "jsmattsonjr@gmail.com"},
]
description = "A GPX route analysis tool that identifies bridges and tunnels along your route"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
]
keywords = ["gpx", "bridges", "tunnels", "cycling", "openstreetmap", "gis", "visualization"]

dependencies = [
    "gpxpy",
    "folium",
    "requests",
    "shapely",
    "geopy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/jsmattsonjr/brunnels"
Repository = "https://github.com/jsmattsonjr/brunnels.git"
Issues = "https://github.com/jsmattsonjr/brunnels/issues"

[project.scripts]
brunnels = "brunnels.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["brunnels*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = false  # Allow Any returns for third-party libraries
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped function definitions
ignore_missing_imports = true  # Ignore missing stubs for third-party libraries
check_untyped_defs = false  # Don't check untyped function bodies

[tool.setuptools_scm]
write_to = "src/brunnels/_version.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
