[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brunnels"
dynamic = ["version"]
authors = [
    {name = "Jim Mattson", email = "jsmattsonjr@gmail.com"},
]
description = "A GPX route analysis tool that identifies bridges and tunnels along your route"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
]
keywords = ["gpx", "bridges", "tunnels", "cycling", "openstreetmap", "gis", "visualization"]

dependencies = [
    "gpxpy>=1.4.2,<2.0",           # Stable API, avoid major version bump
    "folium>=0.12.0,<1.0",         # 0.12+ stable API, allow minor updates
    "requests>=2.25.0,<3.0",       # Very stable, 2.x has been solid for years
    "shapely>=1.8.0,<3.0",         # 1.8+ has performance improvements, 2.x is stable
    "pyproj>=3.2.0,<4.0",          # 3.2+ is stable modern version
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "psutil",
    "types-requests",
    "types-shapely",
]

[project.urls]
Homepage = "https://github.com/jsmattsonjr/brunnels"
Repository = "https://github.com/jsmattsonjr/brunnels.git"
Issues = "https://github.com/jsmattsonjr/brunnels/issues"

[project.scripts]
brunnels = "brunnels.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["brunnels*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = false  # Allow Any returns for third-party libraries
warn_unused_configs = true

[tool.setuptools_scm]
write_to = "src/brunnels/_version.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
